--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -26,6 +26,7 @@
     "sooner": "^1.1.4",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
+    "use-typewriter-hook": "^3.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
